[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/UI/GUI/Healthbar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/GUI/Expbar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/GUI/Ammo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/GUI/GUI.gd" type="Script" id=4]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/UI/DebugLayout.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/UI/GUI/Crosshair.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/UI/PauseMenue/PauseMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sprites/Items/padlock.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="HUD" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
margin_right = 1516.0
margin_bottom = 880.0
mouse_filter = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="HUD/VBoxContainer"]
margin_right = 1516.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="TimeWidget" type="HBoxContainer" parent="HUD/VBoxContainer/HBoxContainer3"]
margin_right = 165.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="HUD/VBoxContainer/HBoxContainer3/TimeWidget"]
margin_right = 77.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "TIME"

[node name="Time" type="Label" parent="HUD/VBoxContainer/HBoxContainer3/TimeWidget"]
margin_left = 81.0
margin_right = 165.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "00:00"

[node name="ScoreWidget" type="HBoxContainer" parent="HUD/VBoxContainer/HBoxContainer3"]
margin_left = 1336.0
margin_right = 1516.0
margin_bottom = 38.0
size_flags_horizontal = 10

[node name="Label" type="Label" parent="HUD/VBoxContainer/HBoxContainer3/ScoreWidget"]
margin_right = 104.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "SCORE"

[node name="Score" type="Label" parent="HUD/VBoxContainer/HBoxContainer3/ScoreWidget"]
margin_left = 108.0
margin_right = 180.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "1000"

[node name="DebugLayout" parent="HUD/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 42.0
margin_right = 1516.0
margin_bottom = 199.0

[node name="Seperator" type="HBoxContainer" parent="HUD/VBoxContainer"]
margin_top = 203.0
margin_right = 1516.0
margin_bottom = 784.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/VBoxContainer"]
margin_top = 788.0
margin_right = 1516.0
margin_bottom = 788.0
alignment = 2

[node name="EffectContainer" type="HBoxContainer" parent="HUD/VBoxContainer/HBoxContainer"]

[node name="Seperator" type="HBoxContainer" parent="HUD/VBoxContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 1516.0
size_flags_horizontal = 3

[node name="LockSymbol" type="TextureRect" parent="HUD/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 1476.0
margin_right = 1516.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
rect_clip_content = true
size_flags_vertical = 9
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/VBoxContainer"]
margin_top = 792.0
margin_right = 1516.0
margin_bottom = 880.0

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/VBoxContainer/VBoxContainer"]
margin_right = 1516.0
margin_bottom = 88.0
mouse_filter = 2
size_flags_vertical = 4

[node name="CenterContainer" type="CenterContainer" parent="HUD/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 385.0
margin_bottom = 88.0
mouse_filter = 2
size_flags_horizontal = 9
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/VBoxContainer/VBoxContainer/HBoxContainer/CenterContainer"]
margin_right = 385.0
margin_bottom = 88.0
size_flags_horizontal = 5
size_flags_vertical = 9

[node name="EffectContainer" type="HBoxContainer" parent="HUD/VBoxContainer/VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer"]
size_flags_horizontal = 0

[node name="HealthbarWidget" parent="HUD/VBoxContainer/VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 4.0
margin_right = 385.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 50 )

[node name="ExpbarWidget" parent="HUD/VBoxContainer/VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 58.0
margin_right = 385.0
margin_bottom = 88.0

[node name="CenterContainer2" type="CenterContainer" parent="HUD/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 1468.0
margin_right = 1516.0
margin_bottom = 88.0
mouse_filter = 2
size_flags_horizontal = 10

[node name="AmmoWidget" parent="HUD/VBoxContainer/VBoxContainer/HBoxContainer/CenterContainer2" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 31.0
margin_right = 48.0
margin_bottom = 57.0
size_flags_vertical = 9
alignment = 2

[node name="Crosshair" parent="." instance=ExtResource( 7 )]
scale = Vector2( 0.3, 0.3 )

[node name="PauseMenu" parent="." instance=ExtResource( 8 )]
pause_mode = 2
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1536.0
margin_bottom = 900.0
mouse_filter = 1

[node name="CardHolder" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = 150.0
margin_right = -150.0
margin_bottom = -150.0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CardHolder"]
margin_left = 618.0
margin_top = 300.0
margin_right = 618.0
margin_bottom = 300.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1
